Edited background image to radial-gradient; width and height 100vh

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 body {
     background: radial-gradient(cyan, darkblue);
+    width: 100vh;
+    height: 100vh;
 }
 .bp-btn {
     background-color: blue;
